tests/03-typecheck/01-data-redefined.ref
tests/03-typecheck/01-data-redefined.sl:3:6, Semantic error: data int is redefined
