tests/03-typecheck/01-data-redefined.sl
data int extern

data int extern
